// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/primitives/Footer.tsx > should render itself & its children - end 1`] = `
<div>
  <div
    class="_19itglyw _vchhusvi _r06hglyw _1rjc1b66 _18zrpxbi _bfhkysee"
  >
    <div
      class="_1e0c1txw _vchhusvi _1bahh9n0"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`renderer/components/primitives/Footer.tsx > should render itself & its children - space-between 1`] = `
<div>
  <div
    class="_19itglyw _vchhusvi _r06hglyw _1rjc1b66 _18zrpxbi _bfhkysee"
  >
    <div
      class="_1e0c1txw _vchhusvi _1bah1yb4"
    >
      Test
    </div>
  </div>
</div>
`;
